// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportModuleFromGitHub Library closed Renders a link, which will open modal window 1`] = `
<ImportModuleFromGitHub
  api={
    Object {
      "importFromGithub": [MockFunction] {
        "calls": Array [
          Array [
            Object {
              "url": "",
            },
          ],
        ],
      },
    }
  }
  isReadOnly={false}
  libraryOpen={true}
  moduleAdded={[MockFunction]}
>
  <div
    className=""
  >
    <div
      className="import-module-button content-4 t-vl-gray"
      onClick={[Function]}
    >
      <span>
        IMPORT CUSTOM MODULE
      </span>
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      className="modal-dialog"
      fade={true}
      isOpen={false}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</ImportModuleFromGitHub>
`;

exports[`ImportModuleFromGitHub Library closed Renders a link, which will open modal window 2`] = `
<div
  className="modal-dialog modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className="title-4 t-d-gray"
          >
            IMPORT CUSTOM MODULE
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <div
        className="dialog-body modal-body"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="label-margin t-d-gray content-3"
          >
            GIT URL
          </div>
          <div
            className="import-url-field"
          >
            <input
              className="text-field mb-3 mt-2 content-3"
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder="https://github.com/..."
              type="text"
            />
            <div
              className="label-margin t-m-gray info-1"
            >
              Learn more about how to build your own module 
              <a
                className=" t-f-blue"
                href=" http://help.workbenchdata.com/build-a-custom-module/build-a-custom-module"
                target="_blank"
              >
                here
              </a>
            </div>
          </div>
        </form>
      </div>
    </ModalBody>
    <div
      className="dialog-footer modal-footer"
    >
      <div
        className="button-gray action-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="button-blue action-button"
        onClick={[Function]}
      >
        Import
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportModuleFromGitHub Library open Renders a link, which will open modal window 1`] = `
<ImportModuleFromGitHub
  api={
    Object {
      "importFromGithub": [MockFunction],
    }
  }
  isReadOnly={false}
  libraryOpen={true}
  moduleAdded={[MockFunction]}
>
  <div
    className=""
  >
    <div
      className="import-module-button content-4 t-vl-gray"
      onClick={[Function]}
    >
      <span>
        IMPORT CUSTOM MODULE
      </span>
    </div>
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropTransitionTimeout={150}
      className="modal-dialog"
      fade={true}
      isOpen={false}
      keyboard={true}
      modalTransitionTimeout={300}
      toggle={[Function]}
      zIndex={1050}
    />
  </div>
</ImportModuleFromGitHub>
`;

exports[`ImportModuleFromGitHub Library open Renders a link, which will open modal window 2`] = `
<div
  className="modal-dialog modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className="title-4 t-d-gray"
          >
            IMPORT CUSTOM MODULE
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="dialog-body"
      tag="div"
    >
      <div
        className="dialog-body modal-body"
      >
        <form
          onSubmit={[Function]}
        >
          <div
            className="label-margin t-d-gray content-3"
          >
            GIT URL
          </div>
          <div
            className="import-url-field"
          >
            <input
              className="text-field mb-3 mt-2 content-3"
              onChange={[Function]}
              onKeyPress={[Function]}
              placeholder="https://github.com/..."
              type="text"
            />
            <div
              className="label-margin t-m-gray info-1"
            >
              Learn more about how to build your own module 
              <a
                className=" t-f-blue"
                href=" http://help.workbenchdata.com/build-a-custom-module/build-a-custom-module"
                target="_blank"
              >
                here
              </a>
            </div>
          </div>
        </form>
      </div>
    </ModalBody>
    <div
      className="dialog-footer modal-footer"
    >
      <div
        className="button-gray action-button mr-4"
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className="button-blue action-button"
        onClick={[Function]}
      >
        Import
      </div>
    </div>
  </div>
</div>
`;
